src/styles/markdown.css
/* Markdown Styles */

/* Global */
.markdown {
  @apply leading-relaxed;
}

/* Headers */
.markdown h1 {
  @apply text-2xl my-6 font-bold;
}

.markdown h2 {
  @apply text-sxl my-3 font-semibold;
}

.markdown h3 {
  @apply text-lg my-3 font-semibold;
}

.markdown h4 {
  @apply text-base my-3 font-semibold;
}

.markdown h5 {
  @apply text-sm mt-3 mb-0 font-semibold;
}

.markdown h6 {
  @apply text-xs mt-3 font-semibold;
}

/* Links */
.markdown a {
  @apply text-blue-500;
}
.markdown a:hover {
  @apply underline;
}

/* Paragraph */
.markdown p {
  @apply mb-4;
}

/* Lists */
.markdown ul,
.markdown ol {
  @apply mb-4;
}
.markdown li > p,
.markdown li > ul,
.markdown li > ol {
  @apply mb-0;
}
.markdown ol {
  @apply ml-2;
  @apply list-decimal;
}
.markdown ul {
  @apply ml-8;
  @apply list-disc;
}
.markdown ul li {
  @apply break-words;
}

/* Blockquotes */
.markdown blockquote {
  @apply p-0 p-2 bg-gray-100 m-0 mb-4 border-l-4 border-gray-400 italic;
}
.markdown blockquote > p {
  @apply mb-0;
}

/* Tables */
.markdown td,
.markdown th {
  @apply px-2 py-1 border border-gray-400;
}

.markdown table {
  @apply mb-6;
}

.markdown a.remark-header-anchor {
  @apply -mb-0.5;
}

.markdown a #header-anchor-icon {
  @apply fill-current;
  @apply text-blue-500;
}

/* Images */
.markdown img {
}

/* Code blocks */
.gatsby-highlight {
  @apply mb-6;
}

/* Details; Summary */
details {
  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
  background: #1e1e1e;
  @apply rounded-md;
  position: relative;
}
details .summary-title {
  color: #ff5074;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
details:hover {
  cursor: pointer;
}
details .summary-content {
  border-top: 1px solid #e2e8f0;
  cursor: default;
  padding: 1em;
  font-weight: 300;
  line-height: 1.5;
  color: #ffffff;
}
details .summary-content blockquote > p {
  @apply text-black;
}
details summary {
  list-style: none;
  padding: 1em;
}
details summary:focus {
  outline: none;
}
details summary:hover .summary-chevron-up svg {
  opacity: 1;
}
details .summary-chevron-up svg {
  opacity: 0.5;
}
details .summary-chevron-up,
details .summary-chevron-down {
  pointer-events: none;
  position: absolute;
  top: 1em;
  right: 1em;
  background: #1e1e1e;
  color: #ffffff;
}
details .summary-chevron-up svg,
details .summary-chevron-down svg {
  display: block;
}
details summary::-webkit-details-marker {
  display: none;
}

@media (prefers-color-scheme: light) {
  .markdown h1,
  .markdown h2,
  .markdown h3,
  .markdown h4,
  .markdown h5,
  .markdown h6 {
    @apply text-black;
  }
}

@media (prefers-color-scheme: dark) {
  .markdown h1,
  .markdown h2,
  .markdown h3,
  .markdown h4,
  .markdown h5,
  .markdown h6 {
    @apply text-white;
  }

  ol li {
    color: #ffffff;
  }

  .markdown blockquote > p {
    @apply text-black;
  }

  details .summary-chevron-down {
    background: #1e1e1e;
  }
}

